# llm-dataclass

./: .gitignore  README.md  pyproject.toml
.github/instructions/: test.instructions.md
.github/workflows/: release.yml
src/llm_dataclass/: __init__.py  wrappers.py
tests/: test_bool_extended.py  test_dumps_dataclass_nested.py  test_dumps_dataclass_simple.py  test_extra_data.py  test_find_document.py  test_loads_dataclass_simple.py  test_parse.py  test_robustness.py  test_special_chars.py  test_type_validation.py  test_types.py  test_with_namespace.py  test_xml_name.py
